--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ keywords = ["parser", "parsing", "php"]
 [dependencies]
 tusk_lexer = "0.2.*"
 thiserror = "1.0.*"
+
+[[bin]]
+name = "tusk_parser"
+path = "bin/main.rs"
