--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,12 @@ keywords = ["parser", "parsing", "php"]
 [dependencies]
 tusk_lexer = "0.3.3"
 thiserror = "1.0.*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [[bin]]
 name = "tusk_parser"
