--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,4 +10,8 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - run: cargo test
+      
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
